Fixed card floating breaking the layout on smaller screens

--- a/css/index.css
+++ b/css/index.css
@@ -54,7 +54,7 @@ body {
 /* Hover animation for panel */
 .row > div:hover > div {
     margin-top: -5px;
-    margin-bottom: 5px;
+    padding-bottom: 5px;
     border: 1px solid rgb(200, 200, 200);
     box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 5px 2px;
     background: rgba(200, 200, 200, 0.1);
